2012-12-02  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add options -fillcolor and -mediancolor, methods bindlast for histograms and deletedata for xyplots
	* plotchart.tcl: Changed required version of Tcl to 8.5
	* plotchart.man: Describe the deletedata subcommand
	* plotpriv.tcl: New items for histograms (bindlast)
	* plotaxis.tcl: Check if a legend is empty
	* plotbind.tcl: Added new procedure BindLastHistogram
	* pkgIndex.tcl: Bumped version to 2.0.1
	* plotcontour.tcl: Small corrections in determining colour scale
	* plotpack.tcl: Use canvas subcommand because of the new feature to add multiple plots in a single canvas widget

2012-08-27  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Correct small problem with right axis
	* plotaxis.tcl: Implement a different method for labelling the axes

2012-07-30  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add a "deletedata" subcommand (limitation: only for xy-plots)
	* plotpriv.tcl: Implement a first version of a deletedata subcommand
	* plotchart.man: Document the deletedata subcommand

2012-05-18  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotpack.tcl: Correct regular expression to extract the canvas name (it was too greedy; patch by Frank)
	* plotpriv.tcl: Remove overwritten version of GetCanvas (the proper one is in plotpack.tcl)
        * plotchart.tcl: Introduce the private procedure CopyScalingData to remove an incompatibility with
                         previous versions

2012-05-14  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotaxis.tcl: Correct drawing of time-axis - labels were sometimes drawn to the right
	                of the whole plot (Note: same problem can occur with other types of axis,
	                but may be less likely in that context)

2012-05-07  Arjen Markus  <arjenmarkus@users,sourceforge.net>
	* plotchart.tcl: Add a subtitle command (for the moment: XY-plots only)